# master_degree_sin5007

./: pyproject.toml
CODE/AULA 8 & 9/: GUI - SIN5007 - ATIVIDADE 8.ipynb  GUI - SIN5007 - ATIVIDADE 8_FULL.ipynb  GUI - SIN5007 - ATIVIDADE 8_UNDER.ipynb
CODE/FINAIS/: 1_ENTENDIMENTO_DOS_DADOS.ipynb  2_PRE_PROCESSAMENTOS.ipynb  3_MODELAGEM_GERAL.ipynb  4_DEEP_LEARNING.ipynb  best_model_f1.keras
CODE/OLDS/: GUI - SIN5007 - ATIVIDADE 6.ipynb  GUI - SIN5007 - ATIVIDADE 7.ipynb  GUI - SIN5007 - ATIVIDADE 7_SERASA.ipynb
CODE/TESTS/: GUI - SIN5007 - ATIVIDADE 8_KERAS.ipynb
DATA/: df_test.csv  df_test_pca.csv  resultados_svm_pc.csv  results_list_corr.csv  results_list_full.csv  results_list_pca.csv  results_list_rd.csv
DATA/RESULTS/: results_list_bayes_corr_full.csv  results_list_bayes_corr_smote.csv  results_list_bayes_corr_under.csv  results_list_bayes_full.csv  results_list_bayes_pca_full.csv  results_list_bayes_pca_smote.csv  results_list_bayes_pca_under.csv  results_list_bayes_rf_full.csv  results_list_bayes_rf_smote.csv  results_list_bayes_rf_under.csv  results_list_bayes_smote.csv  results_list_bayes_under.csv  results_list_mlp_corr_full.csv  results_list_mlp_corr_smote.csv  results_list_mlp_corr_under.csv  results_list_mlp_full.csv  results_list_mlp_pca_full.csv  results_list_mlp_pca_smote.csv  results_list_mlp_pca_under.csv  results_list_mlp_rf_full.csv  results_list_mlp_rf_smote.csv  results_list_mlp_rf_under.csv  results_list_mlp_smote.csv  results_list_mlp_under.csv  results_list_rf_corr_full.csv  results_list_rf_corr_smote.csv  results_list_rf_corr_under.csv  (+21 more)
