[tool.poetry]
name = "sin5007"
version = "0.1.0"
description = "CODIGOS PARA MATERIA DO PROGRAMA DE MESTRADO SIN5007"
authors = ["Guilherme Lourenço <gui.lourenzo@gmail.com>"]
package-mode= false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
duckdb = "^1.1.1"
imblearn = "^0.0"
mixed-naive-bayes = "^0.0.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
